--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button onclick="window.location.reload();">Przeladuj</button>
     <table id="amogus"></table>
     <script src="script.js"></script>
   </body>
